fix: removes navbar flickering via atom

--- a/src/pages/sevan2023/Navbar/styles.css
+++ b/src/pages/sevan2023/Navbar/styles.css
@@ -8,12 +8,15 @@
   background: #f7f7f7;
   position: relative;
   min-height: 100px;
+  will-change: transform;
 }
 
 .navbar-fixed {
   position: sticky;
   top: 0;
   z-index: 100;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
 }
 
 .navbar-left {
